# dev-tools

./: package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/components/Layout/: index.tsx
src/pages/About/: index.tsx
src/pages/ConfigEditor/: index.tsx
src/pages/DiskAnalysis/: index.tsx
src/pages/OrphanDeps/: index.tsx
src/pages/PortManager/: index.tsx
src/pages/ProcessMonitor/: index.tsx
src/pages/ProjectTemplates/: index.tsx
src/pages/ProxySettings/: index.tsx
src/store/: index.ts
